swagger + fixes
