# event-manager/communication-service/internal/routes/routes.go
@@ -18,7 +18,7 @@ func SetupRoutes(router *gin.Engine, c *Controllers) {
 
 		comments := v1.Group("/comments")
 		{
-			comments.GET("/event/:eventId", c.CommentCtrl.GetCommentsByEventId)
+			comments.GET("/event/:event_id", c.CommentCtrl.GetCommentsByEventId)
 			comments.DELETE("/:id", c.CommentCtrl.DeleteComment)
 			comments.PUT("/:id/read", c.CommentCtrl.MarkCommentAsRead)
 		}
